# cmdrender-simple

./: .gitignore  .hspec  .travis.yml  LICENSE  README.md  cmdrender-simple.cabal  stack.yaml
src/Command/: Render.hs
test/: Main.hs
test/Command/: RenderSpec.hs
