name:                cmdrender-simple
version:             0.1.0.0
synopsis:            Simple library for generating command line arguments
description:
    cmdrender-simple is a simple haskell library for rendering arguments to be passed
    to command line utilities. It can generate either a list of arguments, or a
    fully escaped shell command string.
homepage:            https://github.com/faithanalog/cmdrender-simple#readme
license:             BSD3
license-file:        LICENSE
author:              Faith Analog
maintainer:          faith@faithanalog.com
copyright:           2018 Faith Analog
category:            System, CLI, Options
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs: 
      src
  exposed-modules:
      Command.Render
  build-depends:
      base == 4.*
  if !impl(ghc >= 8)
    build-depends:
        semigroups >= 0.10 && < 0.19
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/faithanalog/cmdrender-simple

test-suite cmdrender-simple-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Command.RenderSpec
  ghc-options:  -Wall -O2 -threaded -funbox-strict-fields -fno-warn-orphans
  hs-source-dirs: test
  build-depends:
      base
    , cmdrender-simple
    , QuickCheck
    , hspec >= 2.4.4 && < 3.0
    , hspec-core
  if !impl(ghc >= 8)
    build-depends:
      semigroups
  default-language: Haskell2010
